# DScode

./: .gitignore  pyproject.toml
.github/workflows/: build.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: cscode-server
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/superpowers/plans/: 2026-06-11-cscode-web-ui-config-plan.md
docs/superpowers/specs/: 2026-06-11-cscode-web-ui-config-design.md
openspec/specs/: cscode-phase4-desktop.md  cscode-phase4-plan.md
scripts/: build-desktop.sh  build-server.sh
src/cscode/: __main__.py  cli.py  desktop_cli.py
src/cscode/core/: config.py  engine.py  messages.py
src/cscode/lsp/: client.py  manager.py
src/cscode/mcp/: client.py  server.py
src/cscode/plugins/: loader.py
src/cscode/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/cscode/server/: app.py
src/cscode/skills/: loader.py
src/cscode/storage/: db.py  session.py
src/cscode/tools/: base.py  bash.py  echo.py  edit.py  glob.py  grep.py  ls.py  read.py  write.py
src/cscode/tui/: app.py
src/cscode/web/: index.html  package-lock.json  package.json
src/cscode/web/src/: App.tsx  main.tsx  types.ts
tests/: mock_lsp.py  mock_mcp.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_lsp.py  test_lsp_manager.py  test_mcp.py  test_mcp_server.py  test_plugins.py  test_providers.py  test_scaffold.py  test_skills.py  test_storage.py  test_tool_implementations.py  test_tools.py  test_tui.py
(+3 files in other folders)
